Fix: document padding on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -46,10 +46,10 @@ vellum-doc::part(index-h4) {
   padding-right: 5em;
 }
 
-@media (max-width: 450px) {
+@media (max-width: 600px) {
   #document {
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
   }
 }
 
